--- a/res/xml/config.xml
+++ b/res/xml/config.xml
@@ -55,6 +55,7 @@
     <plugin name="Echo" value="org.apache.cordova.Echo" />
     <plugin name="Globalization" value="org.apache.cordova.Globalization"/>
     <plugin name="InAppBrowser" value="org.apache.cordova.InAppBrowser"/>
+    <plugin name="Weibo" value="com.lulu.WeiboPlugin"/>
 </plugins>
 </cordova>
 
